jclass/snapshots/runtime-inheritance-invoke_parent_setter-InvokeParentSetterMain$Parent.class.snap
---
source: jclass/src/lib.rs
expression: display
---
class inheritance.invoke_parent_setter.InvokeParentSetterMain$Parent 
  minor version: 0
  major version: 68
  flags: (0x0020) ACC_SUPER
  this_class: #8                       //inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 1, methods: 2, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Fieldref           #8.#9            // inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent.parentId:I
   #8 = Class              #10              // inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent
   #9 = NameAndType        #11:#12          // parentId:I
  #10 = Utf8               inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent
  #11 = Utf8               parentId
  #12 = Utf8               I
  #13 = Utf8               Code
  #14 = Utf8               LineNumberTable
  #15 = Utf8               LocalVariableTable
  #16 = Utf8               this
  #17 = Utf8               Linheritance/invoke_parent_setter/InvokeParentSetterMain$Parent;
  #18 = Utf8               setParentId
  #19 = Utf8               (I)V
  #20 = Utf8               SourceFile
  #21 = Utf8               InvokeParentSetterMain.java
  #22 = Utf8               NestHost
  #23 = Class              #24              // inheritance/invoke_parent_setter/InvokeParentSetterMain
  #24 = Utf8               inheritance/invoke_parent_setter/InvokeParentSetterMain
  #25 = Utf8               InnerClasses
  #26 = Utf8               Parent
{
  private int parentId;
    descriptor: I
    flags: (0x0002) ACC_PRIVATE
  
  inheritance.invoke_parent_setter.InvokeParentSetterMain$Parent();
    descriptor: ()V
    flags: (0x0000) 
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 4: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Linheritance/invoke_parent_setter/InvokeParentSetterMain$Parent;
  
  public void setParentId(int);
    descriptor: (I)V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: iload_1                 
         2: putfield      #7                  // Field parentId:I
         5: return                  
      LineNumberTable:
        line 8: 0
        line 9: 5
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Linheritance/invoke_parent_setter/InvokeParentSetterMain$Parent;
           0        6     1  parentId I
}
SourceFile: "InvokeParentSetterMain.java"
NestHost: class inheritance/invoke_parent_setter/InvokeParentSetterMain
InnerClasses:
  static #26= #8 of #23;                      // Parent=class inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent of class inheritance/invoke_parent_setter/InvokeParentSetterMain
