jclass/snapshots/runtime-interfaces-basic_interface-BasicInterfaceMain$Summable.class.snap
---
source: jclass/src/lib.rs
expression: display
---
interface interfaces.basic_interface.BasicInterfaceMain$Summable 
  minor version: 0
  major version: 68
  flags: (0x0600) ACC_INTERFACE, ACC_ABSTRACT
  this_class: #1                       //interfaces/basic_interface/BasicInterfaceMain$Summable
  super_class: #3                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 1, attributes: 3
Constant pool:
   #1 = Class              #2               // interfaces/basic_interface/BasicInterfaceMain$Summable
   #2 = Utf8               interfaces/basic_interface/BasicInterfaceMain$Summable
   #3 = Class              #4               // java/lang/Object
   #4 = Utf8               java/lang/Object
   #5 = Utf8               sum
   #6 = Utf8               (II)I
   #7 = Utf8               SourceFile
   #8 = Utf8               BasicInterfaceMain.java
   #9 = Utf8               NestHost
  #10 = Class              #11              // interfaces/basic_interface/BasicInterfaceMain
  #11 = Utf8               interfaces/basic_interface/BasicInterfaceMain
  #12 = Utf8               InnerClasses
  #13 = Utf8               Summable
{
  public abstract int sum(int, int);
    descriptor: (II)I
    flags: (0x0401) ACC_PUBLIC, ACC_ABSTRACT
}
SourceFile: "BasicInterfaceMain.java"
NestHost: class interfaces/basic_interface/BasicInterfaceMain
InnerClasses:
  static #13= #1 of #10;                      // Summable=class interfaces/basic_interface/BasicInterfaceMain$Summable of class interfaces/basic_interface/BasicInterfaceMain
