jclass/snapshots/runtime-string-basic_literal-BasicStringLiteralMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class string.basic_literal.BasicStringLiteralMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #15                      //string/basic_literal/BasicStringLiteralMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = String             #8               // hello
   #8 = Utf8               hello
   #9 = Methodref          #10.#11          // java/lang/String.length:()I
  #10 = Class              #12              // java/lang/String
  #11 = NameAndType        #13:#14          // length:()I
  #12 = Utf8               java/lang/String
  #13 = Utf8               length
  #14 = Utf8               ()I
  #15 = Class              #16              // string/basic_literal/BasicStringLiteralMain
  #16 = Utf8               string/basic_literal/BasicStringLiteralMain
  #17 = Utf8               Code
  #18 = Utf8               LineNumberTable
  #19 = Utf8               LocalVariableTable
  #20 = Utf8               this
  #21 = Utf8               Lstring/basic_literal/BasicStringLiteralMain;
  #22 = Utf8               main
  #23 = Utf8               ([Ljava/lang/String;)V
  #24 = Utf8               args
  #25 = Utf8               [Ljava/lang/String;
  #26 = Utf8               s
  #27 = Utf8               Ljava/lang/String;
  #28 = Utf8               len
  #29 = Utf8               I
  #30 = Utf8               SourceFile
  #31 = Utf8               BasicStringLiteralMain.java
{
  public string.basic_literal.BasicStringLiteralMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lstring/basic_literal/BasicStringLiteralMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=1, locals=3, args_size=1
         0: ldc           #7                  // String hello
         2: astore_1                
         3: aload_1                 
         4: invokevirtual #9                  // Method java/lang/String.length:()I
         7: istore_2                
         8: return                  
      LineNumberTable:
        line 5: 0
        line 6: 3
        line 7: 8
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  args   [Ljava/lang/String;
           3        6     1  s      Ljava/lang/String;
           8        1     2  len    I
}
SourceFile: "BasicStringLiteralMain.java"
