jclass/snapshots/vm-arrays-objects-create_array_with_negative_size_should_throw_err-CreateArrayWithNegativeSizeShouldThrowErrMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class arrays.objects.create_array_with_negative_size_should_throw_err.CreateArrayWithNegativeSizeShouldThrowErrMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #9                       //arrays/objects/create_array_with_negative_size_should_throw_err/CreateArrayWithNegativeSizeShouldThrowErrMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // java/lang/String
   #8 = Utf8               java/lang/String
   #9 = Class              #10              // arrays/objects/create_array_with_negative_size_should_throw_err/CreateArrayWithNegativeSizeShouldThrowErrMain
  #10 = Utf8               arrays/objects/create_array_with_negative_size_should_throw_err/CreateArrayWithNegativeSizeShouldThrowErrMain
  #11 = Utf8               Code
  #12 = Utf8               LineNumberTable
  #13 = Utf8               LocalVariableTable
  #14 = Utf8               this
  #15 = Utf8               Larrays/objects/create_array_with_negative_size_should_throw_err/CreateArrayWithNegativeSizeShouldThrowErrMain;
  #16 = Utf8               main
  #17 = Utf8               ([Ljava/lang/String;)V
  #18 = Utf8               args
  #19 = Utf8               [Ljava/lang/String;
  #20 = Utf8               a
  #21 = Utf8               SourceFile
  #22 = Utf8               CreateArrayWithNegativeSizeShouldThrowErrMain.java
{
  public arrays.objects.create_array_with_negative_size_should_throw_err.CreateArrayWithNegativeSizeShouldThrowErrMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Larrays/objects/create_array_with_negative_size_should_throw_err/CreateArrayWithNegativeSizeShouldThrowErrMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=1, locals=2, args_size=1
         0: iconst_m1               
         1: anewarray     #7                  // class java/lang/String
         4: astore_1                
         5: return                  
      LineNumberTable:
        line 5: 0
        line 6: 5
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  args   [Ljava/lang/String;
           5        1     1  a      [Ljava/lang/String;
}
SourceFile: "CreateArrayWithNegativeSizeShouldThrowErrMain.java"
