jclass/snapshots/vm-arrays-objects-set_negative_array_index_should_throw_err-SetNegativeArrayIndexShouldThrowErrMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class arrays.objects.set_negative_array_index_should_throw_err.SetNegativeArrayIndexShouldThrowErrMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #11                      //arrays/objects/set_negative_array_index_should_throw_err/SetNegativeArrayIndexShouldThrowErrMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // java/lang/String
   #8 = Utf8               java/lang/String
   #9 = String             #10              // Should throw ArrayIndexOutOfBoundsException
  #10 = Utf8               Should throw ArrayIndexOutOfBoundsException
  #11 = Class              #12              // arrays/objects/set_negative_array_index_should_throw_err/SetNegativeArrayIndexShouldThrowErrMain
  #12 = Utf8               arrays/objects/set_negative_array_index_should_throw_err/SetNegativeArrayIndexShouldThrowErrMain
  #13 = Utf8               Code
  #14 = Utf8               LineNumberTable
  #15 = Utf8               LocalVariableTable
  #16 = Utf8               this
  #17 = Utf8               Larrays/objects/set_negative_array_index_should_throw_err/SetNegativeArrayIndexShouldThrowErrMain;
  #18 = Utf8               main
  #19 = Utf8               ([Ljava/lang/String;)V
  #20 = Utf8               args
  #21 = Utf8               [Ljava/lang/String;
  #22 = Utf8               a
  #23 = Utf8               SourceFile
  #24 = Utf8               SetNegativeArrayIndexShouldThrowErrMain.java
{
  public arrays.objects.set_negative_array_index_should_throw_err.SetNegativeArrayIndexShouldThrowErrMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Larrays/objects/set_negative_array_index_should_throw_err/SetNegativeArrayIndexShouldThrowErrMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=3, locals=2, args_size=1
         0: iconst_1                
         1: anewarray     #7                  // class java/lang/String
         4: astore_1                
         5: aload_1                 
         6: iconst_m1               
         7: ldc           #9                  // String Should throw ArrayIndexOutOfBoundsException
         9: aastore                 
        10: return                  
      LineNumberTable:
        line 5: 0
        line 6: 5
        line 7: 10
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       11     0  args   [Ljava/lang/String;
           5        6     1  a      [Ljava/lang/String;
}
SourceFile: "SetNegativeArrayIndexShouldThrowErrMain.java"
